[metadata]
name = neutron_hdn
version = 0.00000001
summary = The almighty Neutron HDN plugin
description-file =
    README.rst
author = nobody
author-email = nobody@nowhere.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    hdn
data_files =
    etc/neutron/plugins/hdn =
        etc/hdn.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook
    neutron.hooks.setup_hook
