[metadata]
name = hdn
summary = Human-Defined Networking for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/networking-hdn
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    hdn
data_files =
    etc/neutron/plugins/hdn = etc/hdn.ini

[entry_points]
neutron.core_plugins =
    hdn_core = hdn.plugins.core.plugin:HdnNeutronPlugin
neutron.service_plugins =
    hdn_l3 =  hdn.plugins.l3.plugin:HdnL3Plugin
    hdn_tasks = hdn.plugins.tasks.plugins:HdnTasksPlugin
neutron.db.alembic_migrations =
    hdn = hdn.db.migration:alembic_migrations

[compile_catalog]
directory = hdn/locale
domain = hdn

[update_catalog]
domain = hdn
output_dir = hdn/locale
input_file = hdn/locale/vmware_nsx.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = hdn/locale/hdn.pot

[pbr]
autodoc_index_modules = 1

[wheel]
universal = 1
